# toilet

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  NEWS  README  TODO  bootstrap  configure.ac
.travis/: before_install.sh
doc/: Makefile.am  toilet.1  toilet.1.in
fonts/: Makefile.am  bfraktur.tlf  biggray12.tlf  biggray9.tlf  bigmono12.tlf  bigmono9.tlf  circle.tlf  emboss.tlf  emboss2.tlf  fauxcyrillic.tlf  fullcyrillic.tlf  future.tlf  letter.tlf  mono12.tlf  mono9.tlf  pagga.tlf  smblock.tlf  smbraille.tlf  smmono12.tlf  smmono9.tlf  unibscript.tlf  uniscript.tlf  wideterm.tlf
src/: Makefile.am  export.c  export.h  figlet.c  figlet.h  filter.c  filter.h  filters.c  filters.h  io.c  io.h  main.c  mono9.c  mygetopt.c  mygetopt.h  render.c  render.h  term.c  toilet.h
test/: Makefile.am  check-build  check-fonts
tools/: Makefile.am  caca2tlf.c
