
allfonts = wideterm.tlf circle.tlf emboss.tlf emboss2.tlf future.tlf \
           ascii9.tlf smascii9.tlf bigascii9.tlf \
           ascii12.tlf smascii12.tlf bigascii12.tlf \
           mono9.tlf smmono9.tlf bigmono9.tlf \
           mono12.tlf smmono12.tlf bigmono12.tlf \
           pagga.tlf letter.tlf smblock.tlf smbraille.tlf

EXTRA_DIST = $(allfonts)

font_DATA = $(allfonts)
fontdir = $(datadir)/figlet

echo-fonts: ; echo $(allfonts)

